--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -2,5 +2,5 @@
 title: "第一学年第一学期法语语法笔记"
 collection: portfolio
 ---
-- [Chapter II: A Further Look at Financial Statements](https://shushuyang231.github.io/files综合篇.pdf)
+- [Chapter II: A Further Look at Financial Statements](https://github.com/shushuyang231/shushuyang231.github.io/blob/master/files/%E7%BB%BC%E5%90%88%E7%AF%87.pdf)
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
