--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -5,3 +5,4 @@ collection: portfolio
 - [语法综合篇](https://shushuyang231.github.io/files/%E7%BB%BC%E5%90%88%E7%AF%87.pdf)
 [复合过去时](https://shushuyang231.github.io/files/le%20%20passé%20%20composé.pdf)
 [介词篇](https://shushuyang231.github.io/files/介词篇.pdf)
+[介词篇](https://shushuyang231.github.io/files/代词篇.pdf)
